fix text overflow

--- a/Families_Share/client/src/styles/AllStyles.css
+++ b/Families_Share/client/src/styles/AllStyles.css
@@ -3696,4 +3696,5 @@ a:active {
 
 .singleItem{
   height: 30vw;
+  overflow: hidden;
 }
